[tool.poetry]
name = "nagios_aws"
version = "0.1.0"
description = "AWS Nagios plugin"
authors = ["Robert Wikman <rwikman@op5.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
boto = "^2.49.0"
nagiosplugin = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^4.4.0"
pytest-cov = "^2.7.1"
codecov = "^2.0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
