[tool.poetry]
name = "check_aws"
version = "0.3.0"
description = "AWS Nagios plugin"
authors = ["Robert Wikman <rwikman@op5.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.17.17"
nagiosplugin = "^1.3.2"
dataclasses = { version = "^0.7", python = ">=3.6 <3.7" }

[tool.poetry.dev-dependencies]
pytest = "^4.4.0"
pytest-cov = "^2.7.1"
codecov = "^2.0.15"
mypy = "^0.770"
autoflake = "^1.3"
black = { version = "^20.8b1", allow-prereleases = true }
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
