[tool.poetry]
name = "check_aws"
version = "0.3.1"
description = "AWS Nagios plugin"
authors = ["Robert Wikman <rwikman@op5.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.155"
nagiosplugin = "^1.3.3"
dataclasses = { version = "^0.7", python = ">=3.6 <3.7" }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
mypy = "^0.971"
autoflake = "^2.0.1"
black = { version = "23.1.0", allow-prereleases = true }
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
